[DSTEW-2080] - Formatting